self-healing-app/istio/web-application-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: web-application-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "web-application.local"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: web-application
spec:
  hosts:
  - "web-application.local"
  gateways:
  - web-application-gateway
  http:
  - route:
    - destination:
        host: web-application
        port:
          number: 80
